test/JDBC/expected/sys-suser_sname-vu-verify.out
SELECT SYS.SUSER_SNAME()
GO
~~START~~
nvarchar
jdbc_user
~~END~~


SELECT SYS.SUSER_SNAME(0x01)
GO
~~START~~
nvarchar
<NULL>
~~END~~


SELECT SYS.SUSER_SNAME(0x0P)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '0x0' at line 1 and character position 23)~~


DECLARE @id SYS.VARBINARY(85)
SET @id = CAST(CAST((SELECT oid FROM pg_catalog.pg_roles WHERE rolname = 'jdbc_user') AS INT) AS SYS.VARBINARY(85))
SELECT SYS.SUSER_SNAME(@id)
GO
~~START~~
nvarchar
jdbc_user
~~END~~


SELECT SYS.SUSER_SNAME(NULL)
GO
~~START~~
nvarchar
<NULL>
~~END~~


SELECT * FROM sys_suser_sname_view_vu_prepare
GO
~~START~~
nvarchar
jdbc_user
~~END~~


EXEC sys_suser_sname_proc_vu_prepare
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: invalid byte sequence for encoding "WIN1252": 0x00)~~


SELECT sys_suser_sname_func_vu_prepare()
GO
~~START~~
varchar
~~ERROR (Code: 33557097)~~

~~ERROR (Message: invalid byte sequence for encoding "WIN1252": 0x00)~~


SELECT * FROM sys_suser_name_view_vu_prepare
GO
~~START~~
nvarchar
jdbc_user
~~END~~


EXEC sys_suser_name_proc_vu_prepare
GO
~~START~~
nvarchar
jdbc_user
~~END~~


SELECT sys_suser_name_func_vu_prepare()
GO
~~START~~
varchar
jdbc_user
~~END~~

